stuck the sidebar to the side + fixed the scroll bar for good this time

--- a/NewsExt/popup/style.css
+++ b/NewsExt/popup/style.css
@@ -8,8 +8,8 @@ body {
   background-color: #222029;
   color: #a6a1ca;
   display: flex;
-  width: 500px;
-  height: 600px;
+  max-width: 500px;
+  max-height: 600px;
 }
 
 .list-item {
@@ -22,7 +22,7 @@ body {
   width: 100%;
   background-color: #222029;
   color: #a6a1ca;
-  box-sizing: border-box;
+  max-height: 600px;
 }
 
 .list-container {
@@ -30,6 +30,7 @@ body {
   flex-grow: 1;
   display: flex;
   flex-direction: column;
+  overflow: scroll;
 }
 
 .list-container > a {
@@ -48,6 +49,7 @@ a {
   width: 95%;
   text-decoration: none;
   display: block;
+  min-height: 90px;
 }
 
 a:hover {
@@ -64,6 +66,7 @@ a:hover {
   display: flex;
   flex-direction: column;
   flex-basis: 10%;
+
 }
 
 .nav-container > button {
